add raw materials apis
