# app/handlers/utils.go
@@ -2,18 +2,22 @@ package handlers
 
 import (
 	"dpolimeni/stockmanagement/app/schemas"
+	"errors"
+	"slices"
 )
 
-func addRawMaterials(stock_products *[]schemas.Product, products []schemas.Product) {
-	// Iterate over the stock products and update the raw materials
-	for i, stock_product := range *stock_products {
-		// Find the product in the list of products
-		for _, product := range products {
-			// Check if the product is the same
-			if stock_product.Name == product.Name {
-				// Update the raw materials
-				(*stock_products)[i].RawMaterials = product.RawMaterials
-			}
+func addRawMaterials(db_materials []schemas.RawMaterial, new_materials []schemas.RawMaterial) ([]schemas.RawMaterial, error) {
+	// Iterate over the new raw materials add them and return an error if any duplicate is found
+	database_ids := []string{}
+	for _, db_materia := range db_materials {
+		database_ids = append(database_ids, db_materia.Id)
+	}
+
+	for _, new_material := range new_materials {
+		if slices.Contains(database_ids, new_material.Id) {
+			return nil, errors.New("Material already in stock")
 		}
 	}
+	db_materials = append(db_materials, new_materials...)
+	return db_materials, nil
 }
