# docs/swagger.json
@@ -192,9 +192,9 @@
                 }
             }
         },
-        "/api/v1/restaurant/raw_material": {
+        "/api/v1/restaurant/materials/create": {
             "post": {
-                "description": "Add a new raw material to a product on the database",
+                "description": "Add new raw materials to the database",
                 "consumes": [
                     "application/json"
                 ],
@@ -204,8 +204,20 @@
                 "tags": [
                     "Restaurant"
                 ],
-                "summary": "Add a new raw material to a product",
+                "summary": "Create a new raw materials",
                 "parameters": [
+                    {
+                        "description": "Raw materials to add",
+                        "name": "raw_materials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/schemas.RawMaterial"
+                            }
+                        }
+                    },
                     {
                         "type": "string",
                         "description": "Restaurant ID",
@@ -214,19 +226,8 @@
                         "required": true
                     },
                     {
-                        "description": "Products to add raw material",
-                        "name": "products",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/schemas.Product"
-                            }
-                        }
-                    },
-                    {
                         "type": "string",
+                        "default": "Bearer",
                         "description": "Authorization",
                         "name": "Authorization",
                         "in": "header",
@@ -329,12 +330,16 @@
         "schemas.Product": {
             "type": "object",
             "required": [
+                "id",
                 "name",
                 "price",
                 "raw_materials"
             ],
             "properties": {
                 "description": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 },
                 "name": {
@@ -357,6 +362,9 @@
                 "description": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -377,6 +385,12 @@
                 "name": {
                     "type": "string"
                 },
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.Product"
+                    }
+                },
                 "stock": {
                     "$ref": "#/definitions/schemas.Stock"
                 }
@@ -385,12 +399,6 @@
         "schemas.Stock": {
             "type": "object",
             "properties": {
-                "products": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/schemas.Product"
-                    }
-                },
                 "rawMaterials": {
                     "type": "array",
                     "items": {
