# pkg/routes/restaurant.go
@@ -20,4 +20,5 @@ func RestaurantRoutes(app *fiber.App, DB database.Storage) {
 	route.Use(middleware.JWTMiddleware())
 	route.Post("/", restaurantHandler.AddRestaurant)
 	route.Delete("/", restaurantHandler.DeleteRestaurant)
+	route.Post("/materials/create", restaurantHandler.AddRawMaterials)
 }
